--- a/docs/output.css
+++ b/docs/output.css
@@ -11,8 +11,10 @@
     --color-red-800: oklch(44.4% 0.177 26.899);
     --color-amber-100: oklch(96.2% 0.059 95.617);
     --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-amber-800: oklch(47.3% 0.137 46.201);
+    --color-amber-950: oklch(27.9% 0.077 45.635);
     --color-sky-100: oklch(95.1% 0.026 236.824);
     --color-sky-200: oklch(90.1% 0.058 230.902);
     --color-sky-300: oklch(82.8% 0.111 230.318);
@@ -21,9 +23,8 @@
     --color-sky-800: oklch(44.3% 0.11 240.79);
     --color-sky-950: oklch(29.3% 0.066 243.157);
     --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-indigo-500: oklch(58.5% 0.233 277.117);
-    --color-purple-500: oklch(62.7% 0.265 303.9);
-    --color-pink-500: oklch(65.6% 0.241 354.308);
+    --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-neutral-50: oklch(98.5% 0 0);
     --color-neutral-100: oklch(97% 0 0);
@@ -31,7 +32,6 @@
     --color-neutral-300: oklch(87% 0 0);
     --color-neutral-400: oklch(70.8% 0 0);
     --color-neutral-500: oklch(55.6% 0 0);
-    --color-neutral-600: oklch(43.9% 0 0);
     --color-neutral-700: oklch(37.1% 0 0);
     --color-neutral-800: oklch(26.9% 0 0);
     --color-neutral-900: oklch(20.5% 0 0);
@@ -43,12 +43,11 @@
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --tracking-wider: 0.05em;
+    --leading-loose: 2;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -229,6 +228,15 @@
   .top-\[45px\] {
     top: 45px;
   }
+  .top-\[56px\] {
+    top: 56px;
+  }
+  .top-\[60px\] {
+    top: 60px;
+  }
+  .top-\[px\] {
+    top: px;
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -238,47 +246,29 @@
   .z-99 {
     z-index: 99;
   }
-  .m-\[40\%\] {
-    margin: 40%;
-  }
-  .m-\[50\%\] {
-    margin: 50%;
-  }
-  .m-auto {
-    margin: auto;
-  }
-  .mx-2 {
-    margin-inline: calc(var(--spacing) * 2);
-  }
   .mx-4 {
     margin-inline: calc(var(--spacing) * 4);
-  }
-  .mx-8 {
-    margin-inline: calc(var(--spacing) * 8);
-  }
-  .mx-20 {
-    margin-inline: calc(var(--spacing) * 20);
   }
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
+  .my-3 {
+    margin-block: calc(var(--spacing) * 3);
+  }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
+  }
+  .my-16 {
+    margin-block: calc(var(--spacing) * 16);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .ml-4 {
-    margin-left: calc(var(--spacing) * 4);
-  }
-  .ml-8 {
-    margin-left: calc(var(--spacing) * 8);
-  }
-  .box-border {
-    box-sizing: border-box;
   }
   .block {
     display: block;
@@ -301,9 +291,6 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-200 {
-    height: calc(var(--spacing) * 200);
-  }
   .h-\[10vh\] {
     height: 10vh;
   }
@@ -313,20 +300,62 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
+  .w-2\/10 {
+    width: calc(2/10 * 100%);
+  }
+  .w-2\/100 {
+    width: calc(2/100 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
+  .w-3\/10 {
+    width: calc(3/10 * 100%);
+  }
+  .w-3\/100 {
+    width: calc(3/100 * 100%);
+  }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
+  }
+  .w-4\/10 {
+    width: calc(4/10 * 100%);
+  }
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
-  .w-9 {
-    width: calc(var(--spacing) * 9);
+  .w-20 {
+    width: calc(var(--spacing) * 20);
   }
-  .w-9\/10 {
-    width: calc(9/10 * 100%);
+  .w-20\/100 {
+    width: calc(20/100 * 100%);
+  }
+  .w-25 {
+    width: calc(var(--spacing) * 25);
+  }
+  .w-25\/100 {
+    width: calc(25/100 * 100%);
+  }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
+  .w-30\/10 {
+    width: calc(30/10 * 100%);
+  }
+  .w-30\/100 {
+    width: calc(30/100 * 100%);
+  }
+  .w-35 {
+    width: calc(var(--spacing) * 35);
+  }
+  .w-35\/100 {
+    width: calc(35/100 * 100%);
   }
   .w-95 {
     width: calc(var(--spacing) * 95);
-  }
-  .w-95\/10 {
-    width: calc(95/10 * 100%);
   }
   .w-95\/100 {
     width: calc(95/100 * 100%);
@@ -364,38 +393,17 @@
   .justify-between {
     justify-content: space-between;
   }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
-  }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
-  .rounded-3xl {
-    border-radius: var(--radius-3xl);
-  }
-  .rounded-4xl {
-    border-radius: var(--radius-4xl);
-  }
-  .rounded-\[50\%\] {
-    border-radius: 50%;
-  }
-  .rounded-\[100\%\] {
-    border-radius: 100%;
-  }
-  .rounded-\[100\] {
-    border-radius: 100;
-  }
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
   .rounded-md {
     border-radius: var(--radius-md);
-  }
-  .rounded-xl {
-    border-radius: var(--radius-xl);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -405,23 +413,23 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1.5px;
   }
+  .border-gray-300 {
+    border-color: var(--color-gray-300);
+  }
+  .border-gray-400 {
+    border-color: var(--color-gray-400);
+  }
   .border-gray-700 {
     border-color: var(--color-gray-700);
   }
-  .bg-amber-100 {
-    background-color: var(--color-amber-100);
-  }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
   }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
   }
-  .bg-amber-800 {
-    background-color: var(--color-amber-800);
-  }
-  .bg-neutral-50 {
-    background-color: var(--color-neutral-50);
+  .bg-amber-950 {
+    background-color: var(--color-amber-950);
   }
   .bg-neutral-100 {
     background-color: var(--color-neutral-100);
@@ -435,17 +443,11 @@
   .bg-neutral-400 {
     background-color: var(--color-neutral-400);
   }
-  .bg-neutral-500 {
-    background-color: var(--color-neutral-500);
-  }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
-  .bg-sky-200 {
-    background-color: var(--color-sky-200);
-  }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -468,17 +470,29 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
   }
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
-  .py-20 {
-    padding-block: calc(var(--spacing) * 20);
+  .pl-1 {
+    padding-left: calc(var(--spacing) * 1);
   }
   .pl-2 {
     padding-left: calc(var(--spacing) * 2);
+  }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
+  }
+  .text-left {
+    text-align: left;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -488,13 +502,13 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .leading-loose {
+    --tw-leading: var(--leading-loose);
+    line-height: var(--leading-loose);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
-  }
-  .font-normal {
-    --tw-font-weight: var(--font-weight-normal);
-    font-weight: var(--font-weight-normal);
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
@@ -507,20 +521,14 @@
   .text-\[\#195bbc\] {
     color: #195bbc;
   }
-  .text-blue-500 {
-    color: var(--color-blue-500);
-  }
-  .text-neutral-100 {
-    color: var(--color-neutral-100);
-  }
-  .text-neutral-200 {
-    color: var(--color-neutral-200);
-  }
   .text-neutral-800 {
     color: var(--color-neutral-800);
   }
   .text-neutral-900 {
     color: var(--color-neutral-900);
+  }
+  .line-through {
+    text-decoration-line: line-through;
   }
   .underline {
     text-decoration-line: underline;
@@ -534,14 +542,6 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
-  .duration-20 {
-    --tw-duration: 20ms;
-    transition-duration: 20ms;
-  }
-  .duration-100 {
-    --tw-duration: 100ms;
-    transition-duration: 100ms;
-  }
   .duration-150 {
     --tw-duration: 150ms;
     transition-duration: 150ms;
@@ -549,6 +549,14 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
@@ -568,13 +576,6 @@
       }
     }
   }
-  .hover\:bg-sky-300 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-sky-300);
-      }
-    }
-  }
   .hover\:text-\[\#195bbc\] {
     &:hover {
       @media (hover: hover) {
@@ -589,33 +590,9 @@
       }
     }
   }
-  .focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,0\,0\.\)\] {
-    &:focus {
-      --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,0,0.));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
   .focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,0\,0\.5\)\] {
     &:focus {
       --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,0,0.5));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,0\,0\.7\)\] {
-    &:focus {
-      --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,0,0.7));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .focus\:shadow-\[0px_4px_10px_rgba\(0\,0\,0\,0\.7\)\] {
-    &:focus {
-      --tw-shadow: 0px 4px 10px var(--tw-shadow-color, rgba(0,0,0,0.7));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .focus\:shadow-\[0px_4px_12px_rgba\(0\,0\,0\,0\.7\)\] {
-    &:focus {
-      --tw-shadow: 0px 4px 12px var(--tw-shadow-color, rgba(0,0,0,0.7));
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
@@ -670,6 +647,16 @@
       background-color: transparent;
     }
   }
+  .md\:px-4 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:px-6 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 6);
+    }
+  }
   .md\:px-10 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 10);
@@ -685,6 +672,11 @@
       padding-block: calc(var(--spacing) * 16);
     }
   }
+  .md\:pl-4 {
+    @media (width >= 48rem) {
+      padding-left: calc(var(--spacing) * 4);
+    }
+  }
   .dark\:bg-black {
     &:where(.dark, .dark *) {
       background-color: var(--color-black);
@@ -693,11 +685,6 @@
   .dark\:bg-neutral-400 {
     &:where(.dark, .dark *) {
       background-color: var(--color-neutral-400);
-    }
-  }
-  .dark\:bg-neutral-500 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-neutral-500);
     }
   }
   .dark\:bg-neutral-700 {
@@ -710,16 +697,6 @@
       background-color: var(--color-neutral-800);
     }
   }
-  .dark\:bg-neutral-950 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-neutral-950);
-    }
-  }
-  .dark\:bg-sky-700 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-sky-700);
-    }
-  }
   .dark\:text-\[\#44a8ed\] {
     &:where(.dark, .dark *) {
       color: #44a8ed;
@@ -730,39 +707,14 @@
       color: var(--color-neutral-100);
     }
   }
-  .dark\:text-neutral-200 {
-    &:where(.dark, .dark *) {
-      color: var(--color-neutral-200);
-    }
-  }
   .dark\:text-neutral-300 {
     &:where(.dark, .dark *) {
       color: var(--color-neutral-300);
     }
   }
-  .dark\:text-red-800 {
-    &:where(.dark, .dark *) {
-      color: var(--color-red-800);
-    }
-  }
   .dark\:text-white {
     &:where(.dark, .dark *) {
       color: var(--color-white);
-    }
-  }
-  .dark\:shadow-\[0px_2px_10px_rgba\(255\,255\,255\,0\.1\)\] {
-    &:where(.dark, .dark *) {
-      --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(255,255,255,0.1));
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .dark\:hover\:bg-amber-300 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-amber-300);
-        }
-      }
     }
   }
   .dark\:hover\:bg-neutral-300 {
@@ -774,130 +726,12 @@
       }
     }
   }
-  .dark\:hover\:bg-neutral-500 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-neutral-500);
-        }
-      }
-    }
-  }
   .dark\:hover\:bg-neutral-950 {
     &:where(.dark, .dark *) {
       &:hover {
         @media (hover: hover) {
           background-color: var(--color-neutral-950);
         }
-      }
-    }
-  }
-  .dark\:hover\:bg-sky-100 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-sky-100);
-        }
-      }
-    }
-  }
-  .dark\:hover\:bg-sky-300 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-sky-300);
-        }
-      }
-    }
-  }
-  .dark\:hover\:bg-sky-600 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-sky-600);
-        }
-      }
-    }
-  }
-  .dark\:hover\:bg-sky-800 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-sky-800);
-        }
-      }
-    }
-  }
-  .dark\:hover\:bg-sky-950 {
-    &:where(.dark, .dark *) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-sky-950);
-        }
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,\,0\.5\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,,0.5));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,0\,0\.5\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,0,0.5));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(0\,0\,255\,0\.5\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,0,255,0.5));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(0\,255\,255\,0\.5\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(0,255,255,0.5));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(255\,255\,0\,0\.1\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(255,255,0,0.1));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(255\,255\,255\,0\.1\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(255,255,255,0.1));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .dark\:focus\:shadow-\[0px_2px_10px_rgba\(255\,255\,255\,0\.5\)\] {
-    &:where(.dark, .dark *) {
-      &:focus {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(255,255,255,0.5));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
-  .focus\:dark\:shadow-\[0px_2px_10px_rgba\(255\,255\,255\,0\.1\)\] {
-    &:focus {
-      &:where(.dark, .dark *) {
-        --tw-shadow: 0px 2px 10px var(--tw-shadow-color, rgba(255,255,255,0.1));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
   }
@@ -926,6 +760,10 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-leading {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -1022,6 +860,7 @@
       --tw-skew-x: initial;
       --tw-skew-y: initial;
       --tw-border-style: solid;
+      --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
       --tw-outline-style: solid;
