--- a/docs/output.css
+++ b/docs/output.css
@@ -408,6 +408,9 @@
   .justify-between {
     justify-content: space-between;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
@@ -667,6 +670,11 @@
       background-color: transparent;
     }
   }
+  .md\:px-2 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 2);
+    }
+  }
   .md\:px-4 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 4);
@@ -697,6 +705,17 @@
       padding-left: calc(var(--spacing) * 4);
     }
   }
+  .dark\:border {
+    &:where(.dark, .dark *) {
+      border-style: var(--tw-border-style);
+      border-width: 1px;
+    }
+  }
+  .dark\:border-neutral-900 {
+    &:where(.dark, .dark *) {
+      border-color: var(--color-neutral-900);
+    }
+  }
   .dark\:bg-black {
     &:where(.dark, .dark *) {
       background-color: var(--color-black);
@@ -705,6 +724,11 @@
   .dark\:bg-neutral-400 {
     &:where(.dark, .dark *) {
       background-color: var(--color-neutral-400);
+    }
+  }
+  .dark\:bg-neutral-500 {
+    &:where(.dark, .dark *) {
+      background-color: var(--color-neutral-500);
     }
   }
   .dark\:bg-neutral-700 {
@@ -725,6 +749,11 @@
   .dark\:text-neutral-100 {
     &:where(.dark, .dark *) {
       color: var(--color-neutral-100);
+    }
+  }
+  .dark\:text-neutral-200 {
+    &:where(.dark, .dark *) {
+      color: var(--color-neutral-200);
     }
   }
   .dark\:text-neutral-300 {
